stages/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kargo-demo-test
  annotations:
    route.openshift.io/termination: edge
spec:
  rules:
    - host: kargo-demo-prod.apps.apps-crc.testing
      http:
        paths:
          - backend:
              service:
                name: kargo-demo
                port:
                  number: 3000
            path: /
            pathType: ImplementationSpecific
